# Library

./: CMakeLists.txt  README.md
include/common/: MotionProfile.h  Pid.h  Pose2d.h  calc.h  time.h
include/drive/: IDriveTrain.h  IFollower.h  ILocalizer.h  IMotor.h  Localizer.h  MotorGroup.h  PathFollower.h  TankDrive.h
include/drive/drivetrains/: TankDrive.h
include/drive/followers/: GVFFollower.h  RamseteFollower.h
include/pathing/: Spline.h  Trajectory.h  TrajectoryBuilder.h
src/common/: MotionProfile.cpp  Pid.cpp  Pose2d.cpp
src/drive/: Localizer.cpp  PathFollower.cpp  Pid.cpp  TankDrive.cpp
src/drive/drivetrains/: TankDrive.cpp
src/drive/followers/: GVFFollower.cpp  RamseteFollower.cpp
src/pathing/: Spline.cpp  Trajectory.cpp  TrajectoryBuilder.cpp
test_include/: DummpyLocalizer.h  DummyDrive.h  DummyLocalizer.h
test_src/: DummyDrive.cpp  DummyLocalizer.cpp  test.cpp
